--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
